--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,13 @@
     <div class="column is-5 is-offset-4">
         <h3 class="title is-3">Register</h3>
         <div class="box">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="notification is-danger">
+                        {{ messages[0] }}
+                    </div>
+                {% endif %}
+            {% endwith %}
             <form method="POST">
                 <div class="field">
                     {{ form.csrf_token() }}
