--- a/templates/html/success.html
+++ b/templates/html/success.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/global.css" />
-    <script src="./success.js" defer></script>
+    <script src="success.js" defer></script>
   </head>
 
   <body>
