--- a/templates/login.html
+++ b/templates/login.html
@@ -30,6 +30,12 @@
                             {% endfor %}
                         </div>
                     </div>
+                        <div>
+                            {{ form.recaptcha }}
+                            {% for error in form.recaptcha.errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
                     <div>
                         {{ form.submit(class="btn btn-lg btn-primary") }}
                     </div>
