Add a custom validator to the recaptcha field so that it is required only after a failed login attempt

--- a/templates/login.html
+++ b/templates/login.html
@@ -30,12 +30,14 @@
                             {% endfor %}
                         </div>
                     </div>
+                    {% if session['logins'] > 0 %}
                         <div>
                             {{ form.recaptcha }}
                             {% for error in form.recaptcha.errors %}
                                 {{ error }}
                             {% endfor %}
                         </div>
+                    {% endif %}
                     <div>
                         {{ form.submit(class="btn btn-lg btn-primary") }}
                     </div>
