Changed display and style for the posts.html and challenges.html pages. Edited and created CSS rules for the different type of elements and classes. Changed the body background colour to white for the moment in base.css.

--- a/static/base.css
+++ b/static/base.css
@@ -30,7 +30,7 @@ div.body-container {
     height: 95%;
     overflow:hidden;
     width:100%;
-    background-color: var(--body-background-colour);
+    background-color: white;
     color: var(--body-text-colour);
 
     /* Center all elements in the body */
