--- a/templates/donate.html
+++ b/templates/donate.html
@@ -2,6 +2,75 @@
 
 {% block content %}
 
-  <h1 class="title">Donate</h1>
+<style>
+  body {
+      font-family: Arial, serif;
+    background: #f1f1f1;
+  }
+
+  /* Header/Blog Title */
+  .header {
+    padding: 30px;
+    font-size: 40px;
+    text-align: center;
+    background: white;
+  }
+
+  /* Create two unequal columns that floats next to each other */
+  /* Left column */
+  .leftcolumn {
+    float: left;
+    width: 75%;
+  }
+
+  /* Right column */
+  .rightcolumn {
+    float: left;
+    width: 25%;
+    padding-left: 20px;
+  }
+
+  /* Add a card effect for articles */
+  .card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+  }
+
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {
+      width: 100%;
+      padding: 0;
+    }
+  }
+</style>
+
+<div class="column is-6 is-offset-3">
+  <h1 class="title is-1">Donations</h1>
+  <div class="box">
+      {% for donation in donations %}
+          <div class="row">
+              <div class="leftcolumn">
+                  <div class="card">
+                      <h5>{{ donation.created.strftime('%d-%m-%Y') }}</h5>
+                      <h5>{{ donation.amount}}</h5>
+                      <h5>{{ donation.donated }}</h5>
+                      <p>{{ donation.reason }}</p>
+
+                  </div>
+              </div>
+          </div>
+      {% endfor %}
+  </div>
+</div>
+
 
 {% endblock %}
