--- a/templates/base.html
+++ b/templates/base.html
@@ -36,9 +36,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-color-navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="/">Greenify</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-align-justify"></i>
                 </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -51,21 +51,12 @@
                             Feed
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            {% if current_user.role == "admin" %}
-                            <li><a class="dropdown-item" href="{{ url_for("challenges.create") }}">New Challenge</a></li>
-                            {% endif %}
                             <li><a class="dropdown-item" href="{{ url_for("challenges.challenges") }}">Challenges</a></li>
-                            {% if current_user.role == "admin" %}
-                            <li><a class="dropdown-item" href="{{ url_for("posts.create") }}">New Post</a></li>
-                            {% endif %}
                             <li><a class="dropdown-item" href="{{ url_for("posts.posts") }}">Posts</a></li>
-                            {% if current_user.role == "admin" %}
-                            <li><a class="dropdown-item" href="{{ url_for("donate.create") }}">New Donation</a></li>
-                            {% endif %}
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{ url_for('donate.donate') }}>Donate</a>
+                        <a class="nav-link" href="{{ url_for("donate.donate") }}">Donate</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Map</a>
@@ -75,7 +66,21 @@
                     </li>
                     {% if current_user.role == "admin" %}
                     <li class="nav-item">
-                        <a class="nav-link" href={{ url_for('admin.admin') }}>Admin</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Admin
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% if current_user.role == "admin" %}
+                            <li><a class="nav-link" href="{{ url_for("admin.admin") }}">Admin Panel</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for("donate.create") }}">New Donation</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for("challenges.create") }}">New Challenge</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for("posts.create") }}">New Post</a></li>
+
+
+                            {% endif %}
+                        </ul>
                     </li>
                     {% endif %}
                     <li class="nav-item">
