--- a/templates/donate.html
+++ b/templates/donate.html
@@ -4,7 +4,7 @@
 
 <style>
   body {
-      font-family: Arial, serif;
+    font-family: Arial;
     background: #f1f1f1;
   }
 
@@ -16,61 +16,45 @@
     background: white;
   }
 
-  /* Create two unequal columns that floats next to each other */
-  /* Left column */
-  .leftcolumn {
-    float: left;
-    width: 75%;
-  }
-
-  /* Right column */
-  .rightcolumn {
-    float: left;
-    width: 25%;
-    padding-left: 20px;
-  }
-
   /* Add a card effect for articles */
   .card {
     background-color: white;
-    padding: 20px;
-    margin-top: 20px;
+    margin: 20px;
   }
 
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  .flex-container {
+      display: flex;
+      flex-wrap: wrap;
   }
-
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {
-      width: 100%;
-      padding: 0;
-    }
+
   }
 </style>
 
-<div class="column is-6 is-offset-3">
-  <h1 class="title is-1">Donations</h1>
-  <div class="box">
-      {% for donation in donations %}
-          <div class="row">
-              <div class="leftcolumn">
-                  <div class="card">
-                      <h5>{{ donation.created.strftime('%d-%m-%Y') }}</h5>
-                      <h5>{{ donation.amount}}</h5>
-                      <h5>{{ donation.donated }}</h5>
-                      <p>{{ donation.reason }}</p>
+<div class="flex-container">
+  {% for donation in donations %}
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">{{ donation.title}}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Amount: {{ donation.amount}} </h6>
+      <h6 class="card-subtitle mb-2 text-muted">Donated: {{ donation.donated }}</h6>
+      <h6 class="card-subtitle mb-2 text-muted">{{ donation.created.strftime('%d-%m-%Y') }}</h6>
+      
+      <p class="card-text">{{ donation.reason }}</p>
 
-                  </div>
-              </div>
-          </div>
-      {% endfor %}
+      <form action="{{ url_for('donate.create_session', id=donation.id) }} " method="post">
+        <div class="input-group mb-3">
+          <span class="input-group-text">£</span>
+          <input name="amount" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+          <span class="input-group-text">.00</span>
+        </div>
+        <input class="btn btn-primary" type="submit" value="Donate"></input>
+    </form>
+      
   </div>
+  </div>
+  {% endfor %}
 </div>
-
 
 {% endblock %}
