Fixed error in update and delete functions for posts and challenges. Blueprint route for both renamed so that they were no confused by the computer as well as changed the button to the element <a>.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -75,11 +75,11 @@
                         <p class="blog-post-content">{{ challenge.body }}</p>
                         {% if challenge.username == current_user.username %}
                             <div class="btn-group btn-group-justified">
-                                <button type="button" class="btn btn-outline-primary" href="{{ url_for('challenges.update', id=challenge.id) }}">Update</button>
-                                <button type="button" class="btn btn-outline-danger" href="{{ url_for('challenges.delete', id=challenge.id) }}">Delete</button>
+                                <a type="button" class="btn btn-outline-primary" href="{{ url_for('challenges.update', id=challenge.id) }}" role="button">Update</a>
+                                <a type="button" class="btn btn-outline-danger" href="{{ url_for('challenges.delete', id=challenge.id) }}" role="button">Delete</a>
                             </div>
                             <br>
-                            <button class="button is-info is-centered btn btn-outline-success btn-block">Join Challenge</button>
+                            <a type="button" class="btn btn-outline-success btn-block" role="button">Join Challenge</a>
                         {% endif %}
                     </div>
                 </div>
