Implementation of the join challenge functionality for users: Created a new table 'join_challenge' in models.py which reflects the action of a user joining a challenge. Two of its columns are foreign keys from the 'users' and 'challenges' table. Created a new function called 'join' in challenges/views.py which creates a new row in the 'join_challenge' table every time a user joins a challenge. Added the url to the button 'Join Challenge' in challenges.html so that it points to the just created 'join' function.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -79,7 +79,7 @@
                                 <a type="button" class="btn btn-outline-danger" href="{{ url_for('challenges.delete', id=challenge.id) }}" role="button">Delete</a>
                             </div>
                             <br>
-                            <a type="button" class="btn btn-outline-success btn-block" role="button">Join Challenge</a>
+                            <a type="button" class="btn btn-outline-success btn-block" href="{{ url_for('challenges.join', id=challenge.id) }}" role="button">Join Challenge</a>
                         {% endif %}
                     </div>
                 </div>
