--- a/templates/admin.html
+++ b/templates/admin.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="column is-12 is-offset-1">
+    <div class="column is-10 is-offset-1">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <div class="notification is-danger">
@@ -85,40 +85,69 @@
                 </div>
             {% endif %}
         {% endwith %}
+    </div>
 
-
-        <h4 class="title is-4">Donations</h4>
+    <h4 class="title is-4">Challenges Joined by Users</h4>
         <div class="box">
-            {% if donations %}
+            {% if joined_challenges %}
                 <div class="field">
                     <table class="table">
                         <tr>
-                            <th>ID</th>
-                            <th>Email</th>
-                            <th>Reason</th>
-                            <th>Amount</th>
-                            <th>Donated</th>
-                            <th>Status</th>
+                            <th>Join ID</th>
+                            <th>User Email</th>
+                            <th>Challenge ID</th>
+                            <th>Date Joined</th>
                         </tr>
-                        {% for donation in donations %}
+                        {% for challenge in joined_challenges %}
                             <tr>
-                                <td>{{ donation.id }}</td>
-                                <td>{{ donation.email }}</td>
-                                <td>{{ donation.reason }}</td>
-                                <td>{{ donation.amount }}</td>
-                                <td>{{ donation.donated }}</td>
-                                <td>{{ donation.status }}</td>
+                                <td>{{ challenge.id }}</td>
+                                <td>{{ challenge.user_email }}</td>
+                                <td>{{ challenge.challenge_id }}</td>
+                                <td>{{ challenge.date_joined.strftime('%d-%m-%Y') }}</td>
                             </tr>
                         {% endfor %}
                     </table>
                 </div>
             {% endif %}
-            <form method="POST" action="/view_all_donations">
+            <form method="POST" action="/view_all_joined_challenges">
                 <div>
-                    <button class="button is-info is-centered">View All Donations</button>
+                    <button class="button is-info is-centered">View All Joined Challenges</button>
                 </div>
             </form>
         </div>
+
+
+    <h4 class="title is-4">Donations</h4>
+    <div class="box">
+        {% if donations %}
+            <div class="field">
+                <table class="table">
+                    <tr>
+                        <th>ID</th>
+                        <th>Email</th>
+                        <th>Reason</th>
+                        <th>Amount</th>
+                        <th>Donated</th>
+                        <th>Status</th>
+                    </tr>
+                    {% for donation in donations %}
+                        <tr>
+                            <td>{{ donation.id }}</td>
+                            <td>{{ donation.email }}</td>
+                            <td>{{ donation.reason }}</td>
+                            <td>{{ donation.amount }}</td>
+                            <td>{{ donation.donated }}</td>
+                            <td>{{ donation.status }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        {% endif %}
+        <form method="POST" action="/view_all_donations">
+            <div>
+                <button class="button is-info is-centered">View All Donations</button>
+            </div>
+        </form>
     </div>
 
 
