--- a/templates/stripe_page.html
+++ b/templates/stripe_page.html
@@ -9,7 +9,7 @@
         <fieldset>
           <label>
             <span>Amount</span>
-            <input type="number" class="field" id="amount-input" value="500" min="50">
+            <input type="number" class="field" id="amount-input" value="10000000" min="10000">
           </label>
           <label>
             <span>Causes</span>
