Added greenify logo img to base.css

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-color-navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Greenify</a>
+            <img src="images/greenifylogo.png" width="100" height="50">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-align-justify"></i>
                 </button>
