spaced out the nav bar items

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,17 @@
 </head>
 
 <style>
+
     .navbar {
-      padding-top: 15px;
+      padding-top: 30px;
       padding-bottom: 15px;
     }
+
+    .nav-item {
+         margin-right: 50px;
+        margin-left: 100px;
+
+}
 
     .navbar-nav li a:hover {
       color: #1abc9c !important;
