--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-color-navbar">
         <div class="container-fluid">
-            <img src="images/greenifylogo.png" width="100" height="50">
+            <img src="/static/logo.svg" width="100" height="50" alt="Greenify logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-align-justify"></i>
                 </button>
