--- a/templates/index.html
+++ b/templates/index.html
@@ -4,4 +4,10 @@
 
   <h1 class="title">Welcome to Greenify!</h1>
 
+    <video autoplay muted loop id="myVideo">
+  <source src="../static/video.mp4" type="video/mp4">
+    </video>
+
+
+
 {% endblock %}
